--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" src="/static/css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
     {% block css %}
     <style>
         .container {
@@ -33,10 +34,13 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item {% block blogactive %}{% endblock blogactive %}">
-        <a class="nav-link" href="/blog">Blogs</a>
+        <a class="nav-link" href="/blog">Logs</a>
       </li>
       <li class="nav-item {% block resourcesactive %}{% endblock resourcesactive %}">
         <a class="nav-link" href="/resources">Resources</a>
+      </li>
+      <li class="nav-item {% block projectsactive %}{% endblock projectsactive %}">
+        <a class="nav-link" href="/projects">Projects</a>
       </li>
       <li class="nav-item {% block joinactive %}{% endblock joinactive %}">
         <a class="nav-link" href="/join">Join Us</a>
@@ -53,5 +57,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
-    <footer style="font-family: roboto;"class="text-center py-3 text-light bg-dark">  Copyright &copy; DevLogs | Pranjal Bareth </footer>
+    <footer style="font-family: roboto; background:#000; color:#575757;"class="text-center py-3 text-light">  Copyright &copy; DevLogs | Pranjal Bareth </footer>
 </html>
