--- a/templates/bloghome.html
+++ b/templates/bloghome.html
@@ -101,7 +101,7 @@
         <div class="card mb-3" style="max-width: 950px;">
           <div class="row no-gutters">
             <div class="col-md-4">
-              <img src="http://127.0.0.1:8000/media/{{blog.poster}}" class="card-img" alt="Developer is Asleep">
+              <img src="http://127.0.0.1:8000/media/{{blog.poster}}" class="card-img" onerror=this.src="https://i.imgur.com/fOWuolO.png">
             </div>
             <div class="col-md-8">
               <div class="card-body">
