--- a/templates/resources.html
+++ b/templates/resources.html
@@ -2,11 +2,12 @@
 {% block resourcesactive %}active{% endblock resourcesactive %}
 {% block css %}
 	<style>
-                .container-fluid {
-                  min-height: 150vh;
+           .container {
+                margin-top:350px;
+                min-height: 150vh;
           }
       body {
-      			font-family: 'Varela Round', sans-serif;;
+      			font-family: 'Varela Round', sans-serif;
       	 		padding: 0;
       	 		margin: 0;
       }
@@ -60,28 +61,212 @@
       			transform: scaleX(1);
       }
 
-	.backg{
-		
-	}
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro');
 	  .bg-text {
+      font-family: 'Varela Round', sans-serif;
 		  position: absolute;
-		  color: #ffffff;
+		  color: #cccccc;
 		  font-size:55px;
-		  top: 50%;
+		  top: 45%;
 		  left: 50%;
 		  transform: translate(-50%, -50%);
 	}
-    </style>
-    <script type="text/javascript">
-        if(navigator.userAgent.indexOf("WebKit") != -1) {
-            var link = document.createElement('link');
-            link.href='css/homer-webkit.css';
-            link.rel='stylesheet';
+  .icot {
+      margin:340px;
+      margin-top:-270px;
+      width: 35%;
+      height: 35%;
+    }
+    .responsive {
+        width: 100%;
+        height: 310px;
+      }
+/*
+.wrapper {
+  width: 1086px;
+  height: 310px;
+  position: absolute; 
+  left: 50%;
+  top: 50%;
+  margin-left:-5px;
+  margin-right:-5px;
+  transform: translate(-50%, -50%);
+  border-radius: 0px;
+  background-image: linear-gradient(to top, #9b00b2 0%, #5d1aad 20%);
+  overflow: hidden;
+}
 
-            document.getElementsByTagName('head')[0].appendChild(link);
+.wave {
+  width: 1000px;
+  height: 825px;
+  position: absolute;
+  top: -35%;
+  left: 50%;
+  margin-left: -500px;
+  margin-top: -550px;
+  border-radius: 35%;
+  background: rgba(0, 0, 0, 1);
+  animation: wave 15s infinite linear;
+}
+
+@keyframes wave {
+  from { transform: rotate(0deg);}
+  from { transform: rotate(360deg);}
+}
+  */
+  .card-title{
+    color:#252849;
+  }
+  .box__button {
+          width:200px;
+          display: block;
+          position: relative;
+          background: #000000;
+          border: 1px solid transparent;
+          border-radius: 50px;
+          height: 50px;
+          text-align: center;
+          text-decoration: none !important;
+          color: #fff;
+          line-height: 50px;
+          font-size: 18px;
+          white-space: nowrap;
+          margin-top: 25px;
+          font-family: 'Varela Round', sans-serif;
+          transition: background .5s ease;
+          overflow: hidden;
+          -webkit-mask-image: -webkit-radial-gradient(white, black);
+        }
+        .box__button:before {
+          content: '';
+          position: absolute;
+          width: 20px;
+          height: 100px;
+          background: #fff;
+          bottom: -25px;
+          left: 0;
+          border: 2px solid #fff;
+          transform: translateX(-50px) rotate(45deg);
+          transition: transform .5s ease;
+        }
+        .box__button:hover {
+          background: #e9effd;
+          border-color: #fff;
+          color:#000;
+          font-weight:bold;
+        }
+        .box__button:hover:before {
+          transform: translateX(250px) rotate(45deg);
         }
 
-    </script>
+        @keyframes upndown {
+          0% {
+            transform: translateY(5px);
+          }
+          50% {
+            transform: translateY(15px);
+          }
+          100% {
+            transform: translateY(5px);
+          }
+        }
+        @keyframes smallnbig {
+          0% {
+            width: 90px;
+          }
+          50% {
+            width: 100px;
+          }
+          100% {
+            width: 90px;
+          }
+        }
+        @keyframes shine {
+          0% {
+            opacity: .2;
+          }
+          25% {
+            opacity: .1;
+          }
+          50% {
+            opacity: .2;
+          }
+          100% {
+            opacity: .2;
+          }
+        }
+
+  </style>
+
+<style media="screen and (max-width: 600px)">
+      .icot {
+      margin:90px;
+      margin-top:-230px;
+      width: 50%;
+      height: 50%;
+    }
+    .responsive {
+        width: 100%;
+        height: 310px;
+      }
+      .bg-text {
+      font-family: 'Varela Round', sans-serif;
+      position: absolute;
+      color: #cccccc;
+      font-size:35px;
+      top: 42%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+  }
+      .wrapper {
+      width: 398px;
+      height: 310px;
+      position: absolute; 
+      left: 50%;
+      top: 50%;
+      margin-left:-2px;
+      transform: translate(-50%, -50%);
+      border-radius: 0px;
+      background-image: linear-gradient(to top,#fafaff 0%, #717bca 20%);
+      overflow: hidden;
+    }
+
+    .wave {
+      width: 1000px;
+      height: 825px;
+      position: absolute;
+      top: -35%;
+      left: 50%;
+      margin-left: -500px;
+      margin-top: -550px;
+      border-radius: 35%;
+      background: rgba(0, 0, 0, 1);
+      animation: wave 15s infinite linear;
+    }
+    @keyframes wave {
+  from { transform: rotate(0deg);}
+  from { transform: rotate(360deg);}
+}
+.card{
+  border:none !important;
+  background:#b0b1e7;
+}
+.container{
+  min-height: 150vh;
+}
+</style>
+<style media="screen and (min-width: 1200px)">
+    .icot {
+      margin:450px;
+      margin-top:-310px;
+      width: 35%;
+      height: 35%;
+    }
+    .responsive {
+        width: 100%;
+        height: 310px;
+      }
+</style>
 
 {% block head %}
 <title>Resources - DevLogs</title>
@@ -90,13 +275,71 @@
 {% endblock css %}
 <!--endCSS-->
 {% block body %}
+<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
+<script src="https://use.fontawesome.com/f2a667ce23.js"></script>
+  <div class="mx-0 px-0 container-fluid">
+    <div class="carousel-item active">
+      <div class="wrapper">
+        <div class="wave"></div>
+      </div>
+        <div class="bg-text" id="parent">Resources<div id="border"></div></div>
+        <img src="/static/img/000-bg.png" class="backg d-block w-100 responsive" alt="...">
 
-<div class="mx-0 px-0 container-fluid">
-	<div class="carousel-item active">
-		<h3 class="bg-text">Resources</h3>
-	    <img src="/static/img/000-bg.png" class="backg d-block w-100" alt="...">
-	</div>
-</div>
+    </div>
+      </div>
+      <div class="container">
+        <div class="card-deck">
+      <div class="card mb-3">
+        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
+        <div class="card-body">
+          <h5 class="card-title">Web Development</h5>
+          <!--p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p-->
+        </div>
+      </div>
+      <div class="card mb-3">
+        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
+        <div class="card-body">
+          <h5 class="card-title">Android Devlopment</h5>
+          <!--p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p-->
+        </div>
+      </div>
+      <div class="card mb-3">
+        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
+        <div class="card-body">
+          <h5 class="card-title">API's</h5>
+          <!--p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p-->
+        </div>
+      </div>
+    </div>
+    <!--Deck 2-->
+    <br>
+    <div class="card-deck">
+      <div class="card mb-3">
+        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
+        <div class="card-body">
+          <h5 class="card-title">Frameworks</h5>
+          <!--p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p-->
+        </div>
+      </div>
+      <div class="card mb-3">
+        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
+        <div class="card-body">
+          <h5 class="card-title">Game Development</h5>
+          <!--p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p-->
+        </div>
+      </div>
+      <div class="card mb-3">
+        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
+        <div class="card-body">
+          <h5 class="card-title">Competitive Programming</h5>
+          <!--p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p-->
+        </div>
+      </div>
+    </div>
+    <a target="_self" href="/blog" class="box__button">Go to Logs &nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i>
+</a><br>
+  </div>
+
 <!--homer-code-->
 <!--endBODY-->
 {% endblock body %}
