--- a/templates/index.html
+++ b/templates/index.html
@@ -179,7 +179,7 @@
 	<div class="mx-0 px-0 container-fluid">
 		<div class="carousel-item active">
 		    <img src="/static/img/000-bg.png" class="backg d-block w-100 responsive" alt="...">
-		    <img src="/static/img/dl-s-bg.png" class="icot d-block" alt="...">
+		    <img src="/static/img/cp-s-bg.png" class="icot d-block" alt="...">
 		</div>
 	</div>
 	<div class="container" style="margin-top:-70px;">
