--- a/templates/wizcode.html
+++ b/templates/wizcode.html
@@ -1,7 +1,10 @@
 {% extends 'base.html' %}
-{% block resourcesactive %}active{% endblock resourcesactive %}
 {% block css %}
 	<style>
+    nav {
+      display: none;
+      visibility:hidden;
+          }
            .container {
                 margin-top:350px;
                 min-height: 150vh;
@@ -81,6 +84,7 @@
         width: 100%;
         height: 310px;
       }
+
 /*
 .wrapper {
   width: 1086px;
@@ -114,11 +118,30 @@
   from { transform: rotate(360deg);}
 }
   */
+  .card {
+        border: 
+    }
+    .title-tit {
+            font-family: 'Ubuntu', sans-serif;
+            font-weight:700;
+            text-decoration: none !important;
+    }
+    .card-text {
+      font-family: 'Noto Serif', serif;
+    }
+    .vertcard2 {
+      width: 55%;
+    height: 55%;
+    }
+    .vertcard {
+      width: 65%;
+    height: 55%;
+    }
   .card-title{
     color:#252849;
   }
   .box__button {
-          width:200px;
+          width:250px;
           display: block;
           position: relative;
           background: #000000;
@@ -130,6 +153,7 @@
           color: #fff;
           line-height: 50px;
           font-size: 18px;
+          padding: 0 70px;
           white-space: nowrap;
           margin-top: 25px;
           font-family: 'Varela Round', sans-serif;
@@ -195,8 +219,79 @@
             opacity: .2;
           }
         }
+    .card {
+      border
+      background: ;
+    }
+    .card-img-top {
+    width: 100%;
+    margin-left:-0.65px;
+    height: 15vw;
+    object-fit: cover;
+}
+    .contr {
+       text-decoration: none !important;
+       color:#6c757d;
+    }
+    .contr:hover {
+       text-decoration: none !important;
+        color:#454545;
+    }  
+    .cont {
+      margin-left:-40px;
+    }
+    .github-button {
+      color:#fff;
+      background-color:#000000;
+      text-decoration: none !important;
+    }
+    .github-button:hover{
+        color:#fff;
+        background-color:#0a0a0a;
+    }
+    a:.github-button:hover{
+        color:#fff;
+        background-color:#0a0a0a;
+    }
+    .live-button {
+      color:#fff;
+      text-decoration: none !important;
+    }
+    .live-button:hover{
+      color:#fff;
+      text-decoration: none !important;
+    }
 
-  </style>
+    .badge {
+        background:#ebedffd1;
+        position:absolute;
+        margin-left:15px;
+        margin-top:-40px;
+    }
+    .prj{
+      font-size:14px;
+    }
+    .badge-repo{
+      margin-top:-12px;
+    }
+    .btn:focus{
+  outline: none;
+  box-shadow: none;
+}
+  .prj:focus{
+  outline: none !important;
+  box-shadow: none !important;
+  border:none !important;
+}
+.dis-head{
+    color:#e1e1e1;
+    font-family: 'Ubuntu', sans-serif;";
+  }
+  .backg {
+    margin-top:-60px;
+    height:510px;
+  }
+</style>
 
 <style media="screen and (max-width: 600px)">
       .icot {
@@ -205,6 +300,14 @@
       width: 50%;
       height: 50%;
     }
+    .backg{
+      height:810px;
+    }
+    .dis-head{
+    color:#e1e1e1;
+    font-family: 'Ubuntu', sans-serif;
+    font-size:20px;
+  }
     .responsive {
         width: 100%;
         height: 310px;
@@ -213,7 +316,7 @@
       font-family: 'Varela Round', sans-serif;
       position: absolute;
       color: #cccccc;
-      font-size:35px;
+      font-size:25px;
       top: 42%;
       left: 50%;
       transform: translate(-50%, -50%);
@@ -247,13 +350,18 @@
   from { transform: rotate(0deg);}
   from { transform: rotate(360deg);}
 }
-.card{
+/*.card{
   border:none !important;
   background:#b0b1e7;
-}
+}*/
 .container{
+  margin-top:650px;
   min-height: 150vh;
 }
+    .badge-repo{
+      margin-left:15px;
+      margin-top:-12px;
+    }
 </style>
 <style media="screen and (min-width: 1200px)">
     .icot {
@@ -267,9 +375,8 @@
         height: 310px;
       }
 </style>
-
 {% block head %}
-<title>Resources - DevLogs</title>
+<title>WizCode | By CodePlay</title>
 {% endblock head %}
 <!--endHEAD-->
 {% endblock css %}
@@ -277,69 +384,43 @@
 {% block body %}
 <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
 <script src="https://use.fontawesome.com/f2a667ce23.js"></script>
+<script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <div class="mx-0 px-0 container-fluid">
     <div class="carousel-item active">
-      <div class="wrapper">
+      <!-- <div class="wrapper">
         <div class="wave"></div>
-      </div>
-        <div class="bg-text" id="parent">Resources<div id="border"></div></div>
-        <img src="/static/img/000-bg.png" class="backg d-block w-100 responsive" alt="...">
-
+      </div> -->
+        <div class="bg-text" style="font-weight:600;"id="parent"><i class="fas fa-hat-wizard"></i>&nbsp;WizCode<div id="border"></div></div>
+        <a href="/about/sstc/" style="text-decoration:none !important;font-family: 'Varela Round', sans-serif; position:absolute; color:#fff; font-size:10px; margin-left:15px; " class="badge-repo badge-pill btn btn-danger">&nbsp;<i style="color:#fff;font-size:12px;margin-top:2px;"class="fa fa-exclamation-circle"></i>&nbsp;&nbsp;SSTC Bhilai Students Only&nbsp;</a>
+        <a href="/about/sstc/" class="badge badge-pill badge-light"><i style="color:green;#007bff;font-size:10px;"class="fa fa-circle"></i>&nbsp;&nbsp;Shri Shanakaracharya Technical Campus, Bhilai</a>
+        <img src="/static/img/000-bg.png" style="height:730px;" class="backg d-block responsive" alt="...">
     </div>
       </div>
       <div class="container">
-        <div class="card-deck">
-      <div class="card mb-3">
-        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
-        <div class="card-body">
-          <h5 class="card-title">Web Developments</h5>
-          <!--p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p-->
-        </div>
-      </div>
-      <div class="card mb-3">
-        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
-        <div class="card-body">
-          <h5 class="card-title">Android Devlopment</h5>
-          <!--p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p-->
-        </div>
-      </div>
-      <div class="card mb-3">
-        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
-        <div class="card-body">
-          <h5 class="card-title">API's</h5>
-          <!--p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p-->
-        </div>
-      </div>
-    </div>
-    <!--Deck 2-->
-    <br>
-    <div class="card-deck">
-      <div class="card mb-3">
-        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
-        <div class="card-body">
-          <h5 class="card-title">Frameworks</h5>
-          <!--p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p-->
-        </div>
-      </div>
-      <div class="card mb-3">
-        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
-        <div class="card-body">
-          <h5 class="card-title">Game Development</h5>
-          <!--p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p-->
-        </div>
-      </div>
-      <div class="card mb-3">
-        <img class="card-img-top" src="http://127.0.0.1:8000/media/img-404-u.png" onerror=this.src="https://i.imgur.com/fOWuolO.png">
-        <div class="card-body">
-          <h5 class="card-title">Competitive Programming</h5>
-          <!--p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p-->
-        </div>
-      </div>
-    </div>
-    <a target="_self" href="/blog" class="box__button">Go to Logs &nbsp;&nbsp;<i class="fa fa-arrow-circle-right"></i>
-</a><br>
-  </div>
+          <div class="jumbotron" style="background-color:#000;">
+              <h2 class="dis-head"><i class="fas fa-hat-wizard"></i><b>&nbsp;&nbsp;WizCode :</b> School of Wizardry & Witchcraft</h2><br>
+              <p style="font-size:15px; color:#b9bbbe;font-family: 'Ubuntu', sans-serif;" class="lead">WizCode is a Magical themed School focused for every student of Technical field. You can get Free Roadmaps for certain career fields & paths. Projects. Notes. Group Chat. Games. Challenges. Events. & a lot more. It's UnOfficial & a Student Initiative. Only for SSTC Bhilai Students. For getting Admission in WizCode School of Witchcraft & Wizardry, Register below.</p>
+              <hr style="background-color:#b9bbbe;" class="my-4">
+              <p style="font-size:11px; color:#b9bbbe; font-family: 'Ubuntu', sans-serif;">* Register below and Enroll in <b>WizEnroll</b> : WizCode Wizard Enrollment Porgram. ( WizEnroll : Will be availale soon. Stay tuned. )</p>
+              <a class="prj btn btn-primary btn-lg" style="background-color:#7289da; margin-top:-6px; border:none !important;"href="#" role="button"><!-- <i class="fab fa-discord" style="font-size:18px;"> --></i>&nbsp;&nbsp;Register in WizEnroll</a>
 
+          </div>
+          <div class="jumbotron" style="background-color:#36393f;">
+              <h2 class="dis-head"><i class="fab fa-discord"></i><b>&nbsp;&nbsp;SSTC Folks Discord Community !</b></h2><br>
+              <p style="font-size:15px; color:#b9bbbe;font-family: 'Ubuntu', sans-serif;" class="lead">SSTC Folks Discord Server is for students of SSTC Bhilai. You'll have your year groups, boys/girls only group, Campus-Talk Section, private groups, gaming groups, memes section, harry potter novel themed groups & several more.</p>
+              <hr style="background-color:#b9bbbe;" class="my-4">
+              <!-- <p>Be Respectfull, that's it & you're Welcome !</p> -->
+              <a class="prj btn btn-primary btn-lg" style="background-color:#7289da; margin-top:-6px; border:none !important;"href="https://discord.gg/gvc5J5" role="button"><!-- <i class="fab fa-discord" style="font-size:18px;"> --></i>&nbsp;&nbsp;Join SSTC Folks</a>
+          </div> 
+
+         <!-- <video autoplay class="">
+            <source src="/media/mmm.mp4" type="video/mp4">
+            <source src="movie.ogg" type="video/ogg">
+            Your browser does not support the video tag.
+          </video>  -->
+        </div>
+  <br>
+  </div>  
 <!--homer-code-->
 <!--endBODY-->
 {% endblock body %}
